--- a/forside.css
+++ b/forside.css
@@ -240,6 +240,7 @@ button:hover {
 .introduktion img{
     max-width: 50vh;
     margin: 70px 100px 100px 150px;
+    padding: 30px 50px 0px 0px;
 }
 
 .introduktion h2{
