--- a/kontaktMig.css
+++ b/kontaktMig.css
@@ -46,7 +46,6 @@ p {
     font-weight: 45;
     margin-top: 20px;
     line-height: 2;
-    font-size: 20px;
 }
 
 /* Styler bodyen*/
@@ -150,6 +149,10 @@ body {
     justify-content: space-between;
 }
 
+.kontaktMig p{
+    font-size: 20px;
+}
+
 /* Højre side med elevatordør */
     .elevator-dor {
         width: 100%;
@@ -162,7 +165,7 @@ body {
     font-size: 7.5vw;
     line-height: 1.3;
     font-weight: 600;
-    margin: 100px 0px 10px 200px;
+    margin: 100px 0px 10px 100px;
 }
 
 #cta{
@@ -172,7 +175,7 @@ body {
 #bloopers{
     position: relative;
     z-index: 1;
-    margin: 0px 0px 900px 700px;
+    margin: 0px 0px 0px 700px;
     font-family: 'mr-gabe', sans-serif;
     font-style: italic;
     display: flex;
@@ -190,6 +193,8 @@ body {
 footer{
     background-color: var(--kontrast-farve);
     padding: 5%;
+    box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1); /* Skyggeeffekt */
+
  }
 
 /* Styling - footer */
