--- a/zeroBuzz.css
+++ b/zeroBuzz.css
@@ -305,3 +305,56 @@ button:hover {
 #denFriske, #denSunde{
     max-height: 250px;
 }
+
+
+/*    FOOTER   */ 
+
+footer{
+    background-color: var(--kontrast-farve);
+    padding: 5%;
+    box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1); /* Skyggeeffekt */
+
+ }
+
+/* Styling - footer */
+.footer-generelt {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Placering - styrer placeringen af logo*/
+.footer-logo {
+    display: flex;
+    font-size: 100px;
+    margin-right: 100px;
+}
+
+.footer-logo p {
+    font-family: var(--h1-font-family);
+    font-size: 100px;
+}
+
+/* Placering - kolonnerne med tekst*/
+.kolonne {
+    flex: 1; /*Sikrer at elementet vil vokse til at fylde al tilgængelig plads i boksen og at hver boks fylder lige meget */
+    text-align: left; /* Venstrejusterer kolonen */
+    padding: 0 40px 0 40px;
+}
+
+
+/* Styling - underpunkter, i kolonnerne*/
+.kolonne p {
+    padding-top: 12px; /*Afstand mellem teksterne*/
+    font-size: 16px;
+}
+
+.kolonne p a {
+    padding-top: 17px; /*Afstand mellem tekst*/
+    text-decoration: none;
+}
+
+/* Effekter - hover */
+.kolonne p :hover {
+    transform: scale(1.04); /* Forstørrer ved hover */
+    font-weight: bold; /* Tykkelse på font ved hover */
+}
